--- a/services/QuillLMS/app/assets/stylesheets/shared/table/table.scss
+++ b/services/QuillLMS/app/assets/stylesheets/shared/table/table.scss
@@ -19,6 +19,11 @@
       margin-top: 0;
       padding: 16px 0px;
     }
+  }
+}
+
+.blog-post-table {
+  tr {
     th, td {
       width: 100px;
     }
